--- a/checkpoint_1/main.ipynb
+++ b/checkpoint_1/main.ipynb
@@ -13,7 +13,7 @@
    "id": "fa97b383-35d9-4c6d-8551-e16e77f16a07",
    "metadata": {},
    "source": [
-    "## Identification of Candidate Datasets"
+    "## Identification of Candidate Datasets (A)"
    ]
   },
   {
@@ -54,11 +54,87 @@
   },
   {
    "cell_type": "markdown",
+   "id": "007c1126-e30b-4150-9520-2c6ade13a819",
+   "metadata": {},
+   "source": [
+    "- Name and Source:\n",
+    "    - Name is \"TLC Trip Record Data\"\n",
+    "    - Source is https://www.nyc.gov/site/tlc/about/tlc-trip-record-data.page\n",
+    "- Course topic alignment:\n",
+    "    - Clustering: grouping trips by spatial + temporal patterns (e.g., commute-like trips vs nightlife trips)\n",
+    "    - Classification: predicting payment type, high-tip vs low-tip, or whether a trip is “long” based on pickup time/location\n",
+    "    - Regression: predicting fare amount, trip duration, or tip amount\n",
+    "- Potential beyond-course techniques:\n",
+    "    - Change point detection: identify structural changes in demand (e.g., COVID disruptions, new policies, seasonal shifts)\n",
+    "    - Causal inference: estimate the effect of weather, policy changes, or congestion pricing on trip volume/fare/tips\n",
+    "    - Distribution shift detection: detect when model assumptions break over time (concept drift in demand and fare patterns)\n",
+    "    - Anomaly detection: flag unusual trips, fraud-like behavior, or extreme outlier events\n",
+    "    - Spatial modeling: kernel density estimation / spatial autocorrelation for pickup hotspots\n",
+    "- Dataset size and structure:\n",
+    "    - Dataset is tabular\n",
+    "    - Very large-scale (millions of trips per month depending on year; tens of millions per year)\n",
+    "    - Each row represents one trip\n",
+    "    - Columns include pickup/dropoff time, location IDs, passenger count, distance, fare breakdown, payment type, and tip (depending on taxi type)\n",
+    "- Data types:\n",
+    "    - Categorical: pickup/dropoff location ID, rate code, payment type\n",
+    "    - Numeric: fare amount, trip distance, tip amount, passenger count, total amount\n",
+    "    - Datetime: pickup and dropoff timestamps\n",
+    "    - Derived features (common): trip duration, speed estimate, time-of-day, day-of-week, holiday flags\n",
+    "- Target variable(s) (examples):\n",
+    "    - Trip duration (regression)\n",
+    "    - Total fare / tip amount (regression)\n",
+    "    - High tip vs low tip (classification)\n",
+    "- Licensing or usage constraints:\n",
+    "    - No licensing or usage constraints (public dataset)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc24c420-ae3b-47dd-a094-89c0d859783d",
    "metadata": {},
    "source": [
     "### Dataset 3"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffa76640-787d-42d0-a5a6-10253c1416b8",
+   "metadata": {},
+   "source": [
+    "- Name and Source:\n",
+    "    - Name: California Housing (1990 U.S. Census)\n",
+    "    - Source: https://www.kaggle.com/datasets/shraddha4ever20/california-housing-dataset\n",
+    "- Course topic alignment:\n",
+    "    - Regression: predict MedHouseValue from demographic + geographic features\n",
+    "    - Clustering: group districts into neighborhood “types” based on income, occupancy, age, and location\n",
+    "    - Outlier / anomaly detection: detect unusual districts (e.g., extreme income vs low house value, very high occupancy, etc.)\n",
+    "    - Feature engineering + model evaluation: scaling, nonlinear transforms, interaction terms, train/test split, cross-validation\n",
+    "- Potential beyond-course techniques:\n",
+    "    - Spatial regression / spatial autocorrelation: model geographic dependence (nearby districts tend to have correlated prices)\n",
+    "    - Geographically Weighted Regression (GWR): allow feature effects (like income) to vary across the map\n",
+    "    - Distribution shift detection: compare model performance across regions (coast vs inland) and detect covariate shift\n",
+    "    - Fairness / bias analysis: investigate whether models systematically underpredict or overpredict for certain geographic regions\n",
+    "    - Causal inference (limited but possible): explore causal claims cautiously (e.g., whether income causes higher home values) using assumptions and sensitivity analysis\n",
+    "- Dataset size and structure:\n",
+    "    - Dataset is tabular\n",
+    "    - 20,640 rows (district-level observations)\n",
+    "    - 8 numeric input features\n",
+    "    - Each row corresponds to a California census block group (district)\n",
+    "- Data types:\n",
+    "    - Numeric (continuous): MedInc, AveRooms, AveBedrms, Population, AveOccup, Latitude, Longitude\n",
+    "    - Numeric (semi-discrete / integer-like): HouseAge\n",
+    "    - Target (numeric): MedHouseValue (median house value in hundreds of thousands of dollars)\n",
+    "- Licensing or usage constraints:\n",
+    "    - No major licensing constraints for academic use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d85657-eded-4dd1-8da5-d4ceb086242c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
