--- a/checkpoint_1/main.ipynb
+++ b/checkpoint_1/main.ipynb
@@ -13,7 +13,7 @@
    "id": "fa97b383-35d9-4c6d-8551-e16e77f16a07",
    "metadata": {},
    "source": [
-    "## Identification of Candidate Datasets (A)"
+    "## (A) Identification of Candidate Datasets"
    ]
   },
   {
@@ -129,9 +129,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8df16b1-4377-4a19-b7f3-9036644348db",
+   "metadata": {},
+   "source": [
+    "## (B) Comparative Analysis of Datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d85657-eded-4dd1-8da5-d4ceb086242c",
+   "metadata": {},
+   "source": [
+    "| Dimension | Tennis Matches (~95k, tabular) | NYC TLC Trip Records (tabular + spatiotemporal) | California Housing (1990 Census, tabular) |\n",
+    "|---|---|---|---|\n",
+    "| **Supported data mining tasks (course vs external)** | **Course:** classification (win/loss), regression (performance metrics), clustering (player styles)  **External:** Elo rating systems, Bayesian skill models, survival/time-to-event modeling | **Course:** clustering (trip patterns), regression (fare/duration/tip), anomaly detection  **External:** change point detection, causal inference, distribution shift detection, spatial modeling | **Course:** regression (MedHouseValue), clustering (district types), anomaly detection  **External:** spatial regression, geographically weighted regression (GWR), distribution shift detection across regions |\n",
+    "| **Data quality issues** | Missing stats for some sets/matches, inconsistent match formats (best-of-3 vs best-of-5), retirements/walkovers, noisy player metadata | Missing/invalid trips, extreme outliers (distance/time/fare), inconsistent entries across taxi types, timestamp parsing issues | Aggregated census data (not individual houses), some features are derived averages, possible geographic artifacts |\n",
+    "| **Algorithmic feasibility** | Feasible on a laptop. Standard ML models and Elo computations are efficient. Deep models possible but not required. | Full dataset may be too large without sampling. Most methods feasible with monthly subsets. Graph/time-series analyses require careful scaling. | Very feasible. Small dataset (20k rows) supports full cross-validation and model comparisons easily. |\n",
+    "| **Bias considerations** | Ranking bias (top players have more recorded matches), era bias (rules/surfaces change), survivorship bias (only pro-level matches) | Sampling bias across taxi types (yellow vs green vs FHV), geographic bias (Manhattan overrepresented), time bias (policy/COVID changes) | Socioeconomic bias (income correlated with race/region historically), aggregation bias (block group averages hide within-area variation), geographic bias (coastal regions dominate high prices) |\n",
+    "| **Ethical considerations** | Low risk. Public sports data. Main concern is fairness in evaluation of players across eras and unequal match exposure. | Moderate risk. Dataset can reflect mobility inequities. Spatial analysis can reinforce stereotypes about neighborhoods if interpreted carelessly. | Moderate risk. Housing models can reinforce harmful narratives about communities. Risk of misuse in real-estate pricing or redlining-style reasoning if presented irresponsibly. |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11d85657-eded-4dd1-8da5-d4ceb086242c",
+   "id": "6692bb2f-ebd0-4aa2-be7d-83d5d4eb056a",
    "metadata": {},
    "outputs": [],
    "source": []
