--- a/checkpoint_1/main.ipynb
+++ b/checkpoint_1/main.ipynb
@@ -151,9 +151,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6692bb2f-ebd0-4aa2-be7d-83d5d4eb056a",
+   "metadata": {},
+   "source": [
+    "# (C) Dataset Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ddc070e-aff3-4015-8239-5f3287fe4b62",
+   "metadata": {},
+   "source": [
+    "I am choosing the ATP Tennis Dataset because of the following reasons:  \n",
+    "- Facilitates use of graph mining\n",
+    "- Facilitates use of large scale machine learning\n",
+    "- Large enough to make analysis challenging, but not too large as to force us to resort to sub sampling techniques   \n",
+    "\n",
+    "These are the drawbacks:  \n",
+    "- No text component\n",
+    "- Messy data - lots of missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e80e5d9-3a38-471e-9731-128176a38e4b",
+   "metadata": {},
+   "source": [
+    "# (D) Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "348a974e-ac07-4cb6-9485-746496240c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import pandas as pd      sjk5h\n",
+    "import joblib\n",
+    "RAW_DATA_PATH = \"../data/raw_data.joblib\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7e7ae775-4b63-43c1-ba5f-2c76d45878a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (375,378,381) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (375,378,381) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (365,368,371) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (365,368,371) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (375,378,381) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (365,368,371,375,378,381) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (365,368,371) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (365,368,371,375,378,381) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (365,368,371) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (375,378,381) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n",
+      "/tmp/ipykernel_111796/1754756656.py:10: DtypeWarning: Columns (127,164,201,238,275,312,365,368,371,375,378,381) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['../data/raw_data.joblib']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "path = \"../data/csv_data/*.csv\"\n",
+    "files = sorted(glob.glob(path))\n",
+    "\n",
+    "dfs = []\n",
+    "for f in files:\n",
+    "    df = pd.read_csv(f)\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "merged = pd.concat(dfs, ignore_index=True)\n",
+    "joblib.dump(merged, RAW_DATA_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "72d94287-4424-4dcc-a450-579680dc8acd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RAW_DATA_PATH' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjoblib\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m tennis_df \u001b[38;5;241m=\u001b[39m joblib\u001b[38;5;241m.\u001b[39mload(\u001b[43mRAW_DATA_PATH\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RAW_DATA_PATH' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "tennis_df = joblib.load(RAW_DATA_PATH)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6692bb2f-ebd0-4aa2-be7d-83d5d4eb056a",
+   "id": "dd0f1d7b-b5c0-4e37-88b1-5c5d06cfff75",
    "metadata": {},
    "outputs": [],
    "source": []
