add github link to checkpoint 1 notebook

--- a/checkpoint_1/main.ipynb
+++ b/checkpoint_1/main.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d73f0124-36fe-4e22-ab91-0153319f6eae",
+   "metadata": {},
+   "source": [
+    "github link: https://github.com/keeganasmith/Data-Mining-Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fa97b383-35d9-4c6d-8551-e16e77f16a07",
    "metadata": {},
    "source": [
